...
                    buttonFunction: () {},
                  ),
                  const SizedBox(height: 25),
                  CustomInterestsCard(
                    buttonColor: const Color(0xffffffff),
                    buttonBorderRadius: BorderRadius.circular(15),
                    buttonText: "Travel",
                    svgPath: 'assets/travel.svg',
                    buttonFunction: () {},
                  ),
                  const SizedBox(height: 25),
                  CustomInterestsCard(
                    buttonColor: const Color(0xffffffff),
...
