...
                        if (!mounted) {
                          return;
                        }
                        CustomSnackBar.showSnackBar(context, match);
                      }
                    },
                    buttonText: "Save",
                  )
                ],
              ),
            ),
          ),
        ),
...
