...
                        buttonText: "Get Started",
                        buttonColor: const Color(0xfff8f5f5),
                      ),
                      SizedBox(
                          height: MediaQuery.of(context).size.height * 0.03),
                      CustomTextButton(
                        key: const Key('loginPage'),
                        buttonBorderRadius: BorderRadius.circular(10),
                        buttonFunction: () {
                          Navigator.push(
                            context,
                            MaterialPageRoute(
                                builder: (context) => const LoginPage()),
...
