...
                      context,
                      MaterialPageRoute(
                          builder: (context) => NavBar(currentIndex: 0)));
                }),
                SizedBox(height: 20),
                Container(
                  key: const Key('searchBar'),
                  height: 50,
                  decoration: BoxDecoration(
                    border: Border.all(
                      color: const Color.fromARGB(255, 201, 201, 201),
                      width: 2,
                    ),
...
                  ),
                ),
                SizedBox(height: 20),
                CustomSelectionTab3(
                  selection: users,
                  selection1: "Users",
                  selecion2: "Scrapbooks",
                  func1: () {
                    if (users == false) {
                      setState(() {
                        users = true;
                      });
                    }
...
