...
      },
    );
  }

  Widget optionsMenu(Color iconColor) {
    return TextButton(
      key: const Key('optionsMenu'),
      onPressed: () {
        showDialog(
          context: context,
          builder: (BuildContext context) {
            return AlertDialog(
              content: Column(
...

                                  CustomSnackBar.showSnackBar(
                                      context, 'User reported');

                                  Navigator.pop(context);
                                },
                                child: const Text("Report"),
                              ),
                            ],
                          );
                        },
                      );
                    },
...
